# nx-postprocessors

./: .gitignore  README.md  deploy_dashboards.sh  deploy_merge_dashboards.py
deploy/systemd/: README.md  nx-dash-gauge.service  nx-dash-parking.service  nx-dash-web-advance.service
postprocessor-python-dice-dashboard/: CMakeLists.txt  README.md  plugin.dice-dashboard.ini.example  postprocessor-python-dice-dashboard.py
postprocessor-python-dice-dashboard/scripts/: dev_watch.py  mock_sender.py  run_local.sh
postprocessor-python-dice-dashboard/tests/: test_classifier.py
postprocessor-python-dice-dashboard/tests/fixtures/: sample_detections.json
postprocessor-python-gauge-dashboard/: CMakeLists.txt  README.md  gauge_web_app.py  nxai_communication_utils.py  plugin.gauge-dashboard.ini.example  postprocessor-python-gauge-dashboard.py  requirements.txt
postprocessor-python-parking-dashboard/: README.md  parking_web_app.py  plugin.parking-dashboard.ini.example  postprocessor-python-parking-dashboard.py
postprocessor-python-stress-dashboard/: CMakeLists.txt  README.md  build_summary.py  build_summary_aaeon.py  build_summary_aaeon_gpu.py  build_summary_dell_gpu.py  build_summary_nuc.py  build_summary_nuc_cpu_final.py  build_summary_nuc_gpu.py  combined_summary.py  deploy.sh  deploy_merge.py  metrics.py  nxai_communication_utils.py  plugin.stress-dashboard.ini.example  postprocessor-python-stress-dashboard.py  requirements.txt  stress_harness.py  ui_templates.py  web_app.py
postprocessor-python-stress-dashboard/docs/: Stress-Dashboard.pptx  dummy_dashboard.html  dummy_report.html  stress_dashboard_intro.docx  stress_dashboard_intro_native.docx
postprocessor-python-vlm-web/: SPEC.md  deploy.sh  nxai_communication_utils.py  plugin.vlm-web.ini.example  plugin.vlm-web.mac.ini  postprocessor-python-vlm-web.py  requirements.txt  vlm_web_app.py
postprocessor-python-web-dashboard-advance/: CMakeLists.txt  plugin.web-dashboard-advance.ini.example  postprocessor-python-web-dashboard-advance.py  requirements.txt  web_app.py
